# Diana_7_ros2

./: .gitignore  README.md
diana7_bonebilling/: CMakeLists.txt  package.xml
diana7_bonebilling/DianaApi/: version
diana7_bonebilling/DianaApi/include/: DianaAPI.h  DianaAPIDef.h  Environment.h  FunctionOptDef.h
diana7_bonebilling/include/sri/: ftsensor.hpp
diana7_bonebilling/src/: drag.cpp  main.cpp  normal.yaml  platmotion.hpp  sensor.cpp  test.cpp  test_servoL.cpp
diana7_description/: CMakeLists.txt  README.md  package.xml
diana7_description/launch/: display.launch.py
diana7_description/urdf/: diana_v2.urdf  diana_v2.xacro  diana_v2_backup.urdf
diana_7_moveit/: .setup_assistant  CMakeLists.txt  README.md  package.xml
diana_7_moveit/config/: diana_v2.ros2_control.xacro  diana_v2.srdf  diana_v2.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
diana_7_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
